# ssf-map-converter

./: .gitignore  CMakeLists.txt  CONTACT.md  LICENSE  Map_converter_for_SSF.sln  Map_parser_for_SSF.sln  README.md
.github/workflows/: build.yml
Map_converter_for_SSF/: Converter.cpp  Converter.h  Displayinfo.cpp  Displayinfo.h  Helper.cpp  Helper.h  Lang.cpp  Lang.h  Main.cpp  Map_cflags.h  Map_converter_for_SSF.rc  Map_converter_for_SSF.vcxproj  Map_converter_for_SSF.vcxproj.filters  Map_desc.cpp  Map_desc.h  Map_info.h  Map_landname.cpp  Map_landname.h  Map_mini.h  Map_objects.cpp  Map_objects.h  Mis_mapunits.h  Mis_mines.h  Mis_mult.cpp  Mis_objects.h  Mis_phrases.cpp  Mis_players.cpp  Mis_scripts.h  Mis_tree.cpp  Mis_woofers.h  Mis_zones.cpp  Mis_zones.h  Parser.cpp  Parser.h  RhombsParser.cpp  RhombsParser.h  Version.h  resource.h  stdafx.h  types.h  (+1 more)
Map_converter_for_SSF/convert/: map_cflags.cpp  map_cflags.h  map_desc.cpp  map_desc.h  map_info.cpp  map_info.h  map_mini.h  (+33 more)
Map_parser_for_SSF/: Beach.cpp  Beach.h  Converter.cpp  Converter.h  Desert.cpp  Desert.h  Displayinfo.cpp  Displayinfo.h  General.h  Helper.cpp  Helper.h  Lang.cpp  Lang.h  Main.cpp  Main.h  Map_cflags.cpp  Map_cflags.h  Map_desc.cpp  Map_desc.h  Map_info.cpp  Map_landname.cpp  Map_landname.h  Map_mini.cpp  Map_mini.h  Map_objects.cpp  Map_objects.h  Map_parser_for_SSF.rc  Map_parser_for_SSF.vcxproj  Map_parser_for_SSF.vcxproj.filters  Map_rhombs.cpp  Map_rhombs.h  Mis_desc.cpp  Mis_desc.h  Mis_groups.cpp  Mis_groups.h  Mis_info.cpp  Mis_info.h  Mis_mapunits.cpp  Mis_mapunits.h  Mis_mines.cpp  (+27 more)
(+16 files in other folders)
